# zephyr_codec2

./: .gitignore  CMakeLists.txt  README.md  circuitdojo_feather_nrf9160_ns.overlay  hts1a.raw  prj.conf
codec2/: CMakeLists.txt  codec2.c  codec2_fft.h  pilot_coeff.h  quantise.c
src/: main.c
