#
# codec2 library sources
#
# project(codec2)

# set(CODEC2_SRCS
#     dump.c
#     lpc.c
#     nlp.c
#     postfilter.c
#     sine.c
#     codec2.c
#     codec2_fft.c
#     fifo.c
#     kiss_fft.c
#     kiss_fftr.c
#     interp.c
#     lsp.c
#     mbest.c
#     newamp1.c
#     phase.c
#     quantise.c
#     pack.c
#     codebook.c
#     codebookd.c
#     codebookjvm.c
#     codebookge.c
# )

# set(CODEC2_PUBLIC_HEADERS
#     codec2.h
#     codec2_fifo.h
#     comp.h
#     comp_prim.h
#     kiss_fft.h
# )

# #
# # Setup the codec2 library
# #
# add_library(codec2 ${CODEC2_SRCS})
# include_directories(${CMAKE_CURRENT_SOURCE_DIR})
# target_link_libraries(codec2 ${CMAKE_REQUIRED_LIBRARIES})
